--- a/Carpentier.html
+++ b/Carpentier.html
@@ -10,7 +10,7 @@
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/88f2d67988.js" crossorigin="anonymous"></script>
     <!-- Custom styles for this template -->
-    <link href="Carpentintier.css" rel="stylesheet">
+    <link href="Carpentier.css" rel="stylesheet">
   </head>
   <body>
   
